objects/APTS_Group__c.object
<CustomObject>
    <description>This is proposal group which will be created dynamically on cart</description>
    <fields>
        <fullName>APTS_Adjustment_Amount__c</fullName>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Adjustment_Type__c</fullName>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
                <value>
                    <fullName>Price Factor</fullName>
                </value>
                <value>
                    <fullName>% Discount Off List</fullName>
                </value>
                <value>
                    <fullName>% Uplift</fullName>
                </value>
                <value>
                    <fullName>Base Price Override</fullName>
                </value>
                <value>
                    <fullName>Price Override</fullName>
                </value>
                <value>
                    <fullName>% Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Adjustment_Value__c</fullName>
        <description>Used instead of adjustment amount as the values can be string representations as well.</description>
        <label>APTS_Adjustment_Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Decentralized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decentralized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Discount__c</fullName>
        <formula>APTS_GrossAmount__c - APTS_NetAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Existing_Agreement_Product_Code__c</fullName>
        <label>Existing Agreement Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Existing_Agreement_Total__c</fullName>
        <label>Existing Agreement Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Existing_ship_and_charge_Total__c</fullName>
        <description>Existing Ship and Charge Total : Holds the Total Amount of all Standalone Amended(Print) Line Items on the BundlePage</description>
        <label>Existing Ship and Charge Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_GrossAmount__c</fullName>
        <label>Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Group_Approval_Required__c</fullName>
        <formula>(APTS_Incremental_Revenue_Above_Threshold__c &lt;= 0  || APTS_Adjustment_Amount__c &gt; APTS_Max_Blended_Discount__c) &amp;&amp;  APTS_ProductConfiguration__r.APTS_Is_Print_Only_Configuration__c  = true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Group_Name_Original__c</fullName>
        <label>Group Name Original</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Incremental_Revenue_Above_Threshold__c</fullName>
        <description>Amount of newly created revenue that is above the incremental revenue required.</description>
        <label>Incremental Revenue Above Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Incremental_Revenue_Required__c</fullName>
        <label>Incremental Revenue Required</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Incremental_Revenue__c</fullName>
        <label>Incremental Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_MLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Max_Blended_Discount__c</fullName>
        <label>Max Blended Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_NetAmount__c</fullName>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Online_Incremental__c</fullName>
        <label>Online Incremental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Primary_Material__c</fullName>
        <label>Primary Material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ProductConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_MLA_Agreement_Number__c</fullName>
        <label>SAP MLA Agreement Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Terminated_Lines_Total__c</fullName>
        <description>To Calculate Lapsed Line Items Price</description>
        <label>Lapsed Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_WCMP_Current_Monthly_Spend__c</fullName>
        <label>Existing WCMP Current Monthly Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_WCMP_Modified_Monthly_Spend__c</fullName>
        <label>Existing WCMP Modified Monthly Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Group</label>
    <nameField>
        <displayFormat>G-{000000}</displayFormat>
        <label>Group Nnumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>